# api/controllers/config.js
@@ -21,7 +21,8 @@ var PUBLIC_KEYS = [
   'ANALYTICS_ENHANCED_TRACKING',
   'ANALYTICS_TRAFFIC_TRACKING',
   'SURVEY_URL',
-  'SHOW_SURVEY_BANNER'
+  'SHOW_SURVEY_BANNER',
+  'ACCESS_GATE'
 ];
 
 /**
